# MobileHaskellFun

./: .gitignore  README.md  setup-tools.sh
Offie/: AppDelegate.swift  Offie-Bridging-Header.h  ViewController.swift  tmp.m
Offie.xcodeproj/: project.pbxproj
Offie.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Offie/Base.lproj/: Main.storyboard
hs-src/: LICENSE  Makefile  MobileFun.cabal  cabal.project  cabal.project.freeze  call
hs-src/src/: Lib.hs
